Will subject change to gh-pages

--- a/css/master.css
+++ b/css/master.css
@@ -180,3 +180,18 @@ max-height:100%;
 /* .text-center{
   background-image: url(../img/topAbout.jpeg);
 } */
+.fontabout{
+  font-size: 24px;
+}
+.abtpadding{
+  padding: 20px;
+}
+#tnl{
+  color:
+  float:center;
+  text-align: center;
+
+}
+#abtfooter{
+  background-image: url(../img/4.png);
+}
